// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en <GifGrid/> ==> Debe de mostrar items cuando se cargar el useFetchGift 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h2>
  <div
    className="card-grid"
  >
    <GifGridItem
      id="ABC"
      key="ABC"
      title="Cualquier cosa"
      url="https//localhost/cualquiercosa/cosa.jpg"
    />
    <GifGridItem
      id="CRD"
      key="CRD"
      title="Cualquier cosa 2"
      url="https//localhost/cualquiercosa/cosa.jpg"
    />
  </div>
</Fragment>
`;

exports[`Pruebas en <GifGrid/> ==> Prueba de snapshot 1`] = `
<Fragment>
  <h2
    className="animate__animated animate__fadeIn"
  >
    One Punch
  </h2>
  <p
    className="animate__animated animate__flash"
  >
    Loading
  </p>
  <div
    className="card-grid"
  />
</Fragment>
`;
